made login and sign up buttons responsive and fixed alignment

--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -1,3 +1,9 @@
 .buttonContainer button {
     margin-right: 2rem;
+    margin-top: 2rem;
+}
+.buttonContainer{
+    display: grid;
+    justify-content: center;
+
 }
